refactor: IDEA modernization - records, accessors, not-null annotations, import cleanup